Added integration test for setUserImage request