@@ -2,15 +2,13 @@ package kh.farrukh.progee_api.app_user;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import kh.farrukh.progee_api.app_user.payloads.*;
+import kh.farrukh.progee_api.global.utils.paging_sorting.PagingResponse;
 import kh.farrukh.progee_api.image.Image;
 import kh.farrukh.progee_api.image.ImageRepository;
 import kh.farrukh.progee_api.role.Permission;
 import kh.farrukh.progee_api.role.Role;
 import kh.farrukh.progee_api.role.RoleRepository;
-import kh.farrukh.progee_api.app_user.payloads.AppUserRequestDTO;
-import kh.farrukh.progee_api.app_user.payloads.SetUserPasswordRequestDTO;
-import kh.farrukh.progee_api.app_user.payloads.SetUserRoleRequestDTO;
-import kh.farrukh.progee_api.global.utils.paging_sorting.PagingResponse;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -24,7 +22,6 @@ import org.springframework.test.web.servlet.MvcResult;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static kh.farrukh.progee_api.app_user.AppUserController.ENDPOINT_USER;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -88,7 +85,7 @@ class AppUserControllerIntegrationTest {
         );
         assertThat(response.getTotalItems()).isEqualTo(users.size());
         assertThat(users.stream().allMatch(user ->
-                response.getItems().stream().map(AppUser::getEmail).collect(Collectors.toList())
+                response.getItems().stream().map(AppUser::getEmail).toList()
                         .contains(user.getEmail())
         )).isTrue();
     }
@@ -107,7 +104,7 @@ class AppUserControllerIntegrationTest {
                 .andReturn();
 
         // then
-        AppUser user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUser.class);
+        AppUserResponseDTO user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUserResponseDTO.class);
         assertThat(user.getId()).isEqualTo(user.getId());
     }
 
@@ -139,7 +136,7 @@ class AppUserControllerIntegrationTest {
                 .andReturn();
 
         // then
-        AppUser user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUser.class);
+        AppUserResponseDTO user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUserResponseDTO.class);
         assertThat(user.getId()).isEqualTo(existingUser.getId());
         assertThat(user.getName()).isEqualTo(userDto.getName());
         assertThat(user.getEmail()).isEqualTo(userDto.getEmail());
@@ -158,6 +155,33 @@ class AppUserControllerIntegrationTest {
         mvc.perform(delete(ENDPOINT_USER + "/" + existingUser.getId()))
                 .andDo(print())
                 .andExpect(status().isNoContent());
+    }
+
+    @Test
+    @WithMockUser(username = "user@mail.com")
+    void canSetUserImage() throws Exception {
+        // given
+        Role role = roleRepository.save(new Role("1", false, Collections.singletonList(Permission.CAN_UPDATE_OWN_USER)));
+        Image existingImage = imageRepository.save(new Image());
+        Image newImage = imageRepository.save(new Image());
+        AppUser existingUser = appUserRepository.save(new AppUser(
+                "user@mail.com", role.getId(), roleRepository, existingImage.getId(), imageRepository)
+        );
+        SetUserImageRequestDTO imageDTO = new SetUserImageRequestDTO(newImage.getId());
+
+        // when
+        MvcResult result = mvc
+                .perform(patch(ENDPOINT_USER + "/" + existingUser.getId() + "/image")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(imageDTO)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andReturn();
+
+        // then
+        AppUserResponseDTO user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUserResponseDTO.class);
+        assertThat(user.getId()).isEqualTo(existingUser.getId());
+        assertThat(user.getImage().getId()).isEqualTo(imageDTO.getImageId());
     }
 
     @Test
@@ -181,7 +205,7 @@ class AppUserControllerIntegrationTest {
                 .andReturn();
 
         // then
-        AppUser user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUser.class);
+        AppUserResponseDTO user = objectMapper.readValue(result.getResponse().getContentAsString(), AppUserResponseDTO.class);
         assertThat(user.getId()).isEqualTo(existingUser.getId());
         assertThat(user.getRole().getId()).isEqualTo(roleDto.getRoleId());
     }
